fix: implement profile back arrow

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,6 +16,7 @@
         android:background="@color/background_color">
 
         <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/go_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin2x"
