fix: profile movies colors

--- a/app/src/main/res/layout/item_movies_actor.xml
+++ b/app/src/main/res/layout/item_movies_actor.xml
@@ -35,7 +35,7 @@
                 android:text="@{String.valueOf(item.voteAverage)}"
                 android:background="@drawable/shape_rate"
                 android:elevation="4dp"
-                android:textColor="@color/white"
+                android:textColor="@color/primary_text_color"
                 android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin4dp"
                 android:text="@{item.title}"
-                android:textColor="@color/white"
+                android:textColor="@color/primary_text_color"
                 android:textSize="12sp"
                 android:elevation="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
