--- a/app/src/main/res/layout/item_movies_actor.xml
+++ b/app/src/main/res/layout/item_movies_actor.xml
@@ -12,63 +12,59 @@
             name="listener"
             type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
     </data>
-    <androidx.cardview.widget.CardView
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="176dp"
-        android:layout_margin="@dimen/margin8dp"
+        android:layout_height="172dp"
         android:backgroundTint="@android:color/transparent"
-        app:cardCornerRadius="@dimen/margin8dp"
-        app:cardElevation="4dp">
+        android:layout_margin="@dimen/margin8dp"
+        android:onClick="@{() -> listener.onItemClicked(item.id)}">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/item_rate"
+            android:layout_width="32dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin16dp"
+            android:layout_marginEnd="@dimen/margin16dp"
+            android:background="@drawable/shape_rate"
+            android:elevation="4dp"
+            android:gravity="center"
+            android:padding="1dp"
+            android:text="@{item.voteAverage.toString()}"
+            android:textColor="@color/white"
+            android:textSize="11sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="9.9" />
+
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin8dp"
+            android:elevation="4dp"
+            android:text="@{item.title}"
+            android:textColor="@color/primary_text_color"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/item_image"
+            app:layout_constraintStart_toStartOf="@+id/item_image"
+            app:layout_constraintTop_toBottomOf="@+id/item_image"
+            tools:text="movie title" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/item_image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:scaleType="centerCrop"
+            app:image="@{item.posterPath}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
+            tools:src="@tools:sample/avatars" />
 
-            <TextView
-                android:id="@+id/item_rate"
-                android:padding="1dp"
-                android:gravity="center"
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin4dp"
-                android:layout_marginEnd="@dimen/margin1x"
-                android:text="@{String.valueOf(item.voteAverage)}"
-                android:background="@drawable/shape_rate"
-                android:elevation="4dp"
-                android:textColor="@color/primary_text_color"
-                android:textSize="11sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="9.9" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/item_image"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="@color/white"
-                android:scaleType="centerCrop"
-                app:image="@{item.posterPath}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/item_name"
-                tools:src="@tools:sample/avatars" />
-
-            <TextView
-                android:id="@+id/item_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin4dp"
-                android:text="@{item.title}"
-                android:textColor="@color/primary_text_color"
-                android:textSize="12sp"
-                android:elevation="4dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:text="movie title" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 </layout>
