--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,8 +69,32 @@
             app:layout_constraintEnd_toEndOf="@id/popular_text"
             app:layout_constraintStart_toStartOf="@+id/popular_text"
             app:layout_constraintTop_toBottomOf="@id/popular_text"
-            tools:listitem="@layout/item_popular_movie" />
+            tools:listitem="@layout/item__movies" />
 
+        <TextView
+            android:id="@+id/upcoming_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin3x"
+            android:text="@string/Upcoming"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/popular_recycler" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/upcoming_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin2x"
+            android:layout_marginTop="@dimen/margin2x"
+            android:orientation="horizontal"
+            app:items="@{viewModel.upcomingMovies.toData().results}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="@id/upcoming_text"
+            app:layout_constraintStart_toStartOf="@+id/upcoming_text"
+            app:layout_constraintTop_toBottomOf="@id/upcoming_text"
+            tools:listitem="@layout/item__movies" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
