fix:  add transition from popular to profile

--- a/app/src/main/res/layout/item_categories_display.xml
+++ b/app/src/main/res/layout/item_categories_display.xml
@@ -9,11 +9,16 @@
             name="item"
             type="com.watermelon.moviesapp.model.response.movie.Movie" />
 
+        <variable
+            name="listener"
+            type="com.watermelon.moviesapp.ui.popular.PopularInteractionListener" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="135dp">
+        android:layout_height="135dp"
+        android:onClick="@{() -> listener.onItemClick(item.id)}">
 
 
         <androidx.cardview.widget.CardView
