--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -41,6 +41,9 @@
         <action
             android:id="@+id/action_detailsFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_detailsFragment_to_detailsFragment"
+            app:destination="@+id/detailsFragment"/>
     </fragment>
     <fragment
         android:id="@+id/tvFragment"
