--- a/app/src/main/res/layout/fragment_categories_display.xml
+++ b/app/src/main/res/layout/fragment_categories_display.xml
@@ -46,7 +46,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin2x"
             android:orientation="vertical"
-            app:items="@{viewModel.movieDetails.toData().results}"
+            app:items="@{viewModel.movieOfOneGenre.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/list_title"
