--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,136 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.home.HomeViewModel" />
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
+        android:id="@+id/sub_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/background_color"
-        tools:context="com.watermelon.moviesapp.ui.home.HomeFragment">
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/loading"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:elevation="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/loading"
-            app:showWhenLoading="@{viewModel.popularMovies}"
-            tools:visibility="gone" />
-
-
-        <TextView
-            android:id="@+id/title"
-            android:gravity="center"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/base_color"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:layout_margin="@dimen/margin2x"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="@string/movies"/>
+            android:background="@color/background_color"
+            tools:context="com.watermelon.moviesapp.ui.home.HomeFragment">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:cardCornerRadius="6dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title">
 
-            <com.smarteist.autoimageslider.SliderView
-                android:id="@+id/trending_Slider"
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loading"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:elevation="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/loading"
+                app:showWhenLoading="@{viewModel.popularMovies}"
+                tools:visibility="gone" />
+
+
+            <TextView
+                android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:sliderAnimationDuration="600"
-                app:sliderAutoCycleDirection="back_and_forth"
-                app:sliderAutoCycleEnabled="true"
-                app:sliderIndicatorAnimationDuration="600"
-                app:sliderIndicatorGravity="center|end"
-                app:sliderIndicatorMargin="8dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin2x"
+                android:gravity="center"
+                android:text="@string/movies"
+                android:textColor="@color/base_color"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:cardCornerRadius="6dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title">
+
+
+                <com.smarteist.autoimageslider.SliderView
+                    android:id="@+id/trending_Slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    app:showWhenSuccess="@{viewModel.popularMovies}"
+                    app:sliderAnimationDuration="600"
+                    app:sliderAutoCycleDirection="back_and_forth"
+                    app:sliderAutoCycleEnabled="true"
+                    app:sliderIndicatorAnimationDuration="600"
+                    app:sliderIndicatorGravity="center|end"
+                    app:sliderIndicatorMargin="8dp"
+                    app:sliderIndicatorOrientation="horizontal"
+                    app:sliderIndicatorPadding="3dp"
+                    app:sliderIndicatorRadius="2dp"
+                    app:sliderIndicatorSelectedColor="#5A5A5A"
+                    app:sliderIndicatorUnselectedColor="#FFF"
+                    app:sliderScrollTimeInSec="1"
+                    app:sliderStartAutoCycle="true" />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/popular_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin3x"
+                android:text="@string/popular"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/cardView"
+                app:layout_constraintTop_toBottomOf="@+id/cardView"
+                app:showWhenSuccess="@{viewModel.popularMovies}" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/popular_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin2x"
+                android:layout_marginTop="@dimen/margin2x"
+                android:orientation="horizontal"
+                app:items="@{viewModel.popularMovies.toData().results}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="@id/popular_text"
+                app:layout_constraintStart_toStartOf="@+id/popular_text"
+                app:layout_constraintTop_toBottomOf="@id/popular_text"
                 app:showWhenSuccess="@{viewModel.popularMovies}"
-                app:sliderIndicatorOrientation="horizontal"
-                app:sliderIndicatorPadding="3dp"
-                app:sliderIndicatorRadius="2dp"
-                app:sliderIndicatorSelectedColor="#5A5A5A"
-                app:sliderIndicatorUnselectedColor="#FFF"
-                app:sliderScrollTimeInSec="1"
-                app:sliderStartAutoCycle="true" />
+                tools:listitem="@layout/item__movies" />
 
-        </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/upcoming_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin3x"
+                android:text="@string/Upcoming"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/cardView"
+                app:layout_constraintTop_toBottomOf="@+id/popular_recycler"
+                app:showWhenSuccess="@{viewModel.popularMovies}" />
 
-        <TextView
-            android:id="@+id/popular_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin3x"
-            app:showWhenSuccess="@{viewModel.popularMovies}"
-            android:text="@string/popular"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/popular_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin2x"
-            android:layout_marginTop="@dimen/margin2x"
-            android:orientation="horizontal"
-            app:showWhenSuccess="@{viewModel.popularMovies}"
-            app:items="@{viewModel.popularMovies.toData().results}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintEnd_toEndOf="@id/popular_text"
-            app:layout_constraintStart_toStartOf="@+id/popular_text"
-            app:layout_constraintTop_toBottomOf="@id/popular_text"
-            tools:listitem="@layout/item__movies" />
-
-        <TextView
-            android:id="@+id/upcoming_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin3x"
-            android:text="@string/Upcoming"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text18sp"
-            app:showWhenSuccess="@{viewModel.popularMovies}"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/popular_recycler" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/upcoming_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin2x"
-            android:layout_marginTop="@dimen/margin2x"
-            android:orientation="horizontal"
-            app:showWhenSuccess="@{viewModel.upcomingMovies}"
-            app:items="@{viewModel.upcomingMovies.toData().results}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintEnd_toEndOf="@id/upcoming_text"
-            app:layout_constraintStart_toStartOf="@+id/upcoming_text"
-            app:layout_constraintTop_toBottomOf="@id/upcoming_text"
-            tools:listitem="@layout/item__movies" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/upcoming_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin2x"
+                android:layout_marginVertical="@dimen/margin2x"
+                android:orientation="horizontal"
+                app:items="@{viewModel.upcomingMovies.toData().results}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="@id/upcoming_text"
+                app:layout_constraintStart_toStartOf="@+id/upcoming_text"
+                app:layout_constraintTop_toBottomOf="@id/upcoming_text"
+                app:showWhenSuccess="@{viewModel.upcomingMovies}"
+                tools:listitem="@layout/item__movies" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
