--- a/app/src/main/res/layout/item__movies.xml
+++ b/app/src/main/res/layout/item__movies.xml
@@ -39,6 +39,8 @@
             android:layout_height="wrap_content"
             android:alpha=".8"
             android:layout_marginTop="@dimen/margin1x"
+            android:layout_marginStart="@dimen/margin1x"
+            android:layout_marginEnd="@dimen/margin1x"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="@dimen/text12sp"
@@ -49,7 +51,7 @@
             android:focusableInTouchMode="true"
             android:scrollHorizontally="true"
             android:text="@{item.title}"
-            android:gravity="center"
+            android:gravity="start"
             app:layout_constraintStart_toStartOf="@id/popular_image"
             app:layout_constraintEnd_toEndOf="@id/popular_image"
             app:layout_constraintTop_toBottomOf="@id/popular_image"
@@ -59,7 +61,8 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_eye"
+            android:layout_marginTop="@dimen/margin4dpx"
+            android:src="@drawable/ic_like"
             app:layout_constraintStart_toStartOf="@id/titleText"
             app:layout_constraintTop_toBottomOf="@id/titleText" />
 
@@ -72,7 +75,7 @@
             android:gravity="start"
             android:text="@{item.voteCount.toString()}"
             android:textSize="@dimen/text12sp"
-            android:layout_marginStart="@dimen/margin1x"
+            android:layout_marginStart="@dimen/margin4dpx"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
