--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="listener"
-            type="com.watermelon.moviesapp.ui.search.SearchViewModel" />
+            type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
     </data>
 
 
@@ -38,72 +38,49 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin8dp"
-                android:layout_marginTop="@dimen/margin8dp"
                 android:isIndicator="true"
                 android:numStars="5"
+                android:layout_marginBottom="@dimen/margin2x"
                 android:progressBackgroundTint="@color/secondary_text_color"
                 android:progressTint="@color/base_color"
                 android:rating="@{Float.valueOf(item.voteAverage)}"
-                app:layout_constraintLeft_toRightOf="@id/item_image"
-                app:layout_constraintTop_toBottomOf="@id/release_date" />
+                app:layout_constraintEnd_toEndOf="@+id/release_date"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/release_date"
+                />
 
             <TextView
                 android:id="@+id/release_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/margin1x"
                 android:text="@{item.releaseDate}"
                 android:textColor="@color/primary_text_color"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintLeft_toRightOf="@id/item_image"
-                app:layout_constraintTop_toBottomOf="@id/move_name"
+                app:layout_constraintBottom_toTopOf="@+id/myRatingBar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/item_image"
                 tools:text="release date" />
-
-            <TextView
-                android:id="@+id/age_classification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin8dp"
-                android:maxHeight="25dp"
-                android:minWidth="90dp"
-                android:text="@{item.adult.toString()}"
-                android:textColor="@color/primary_text_color"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toRightOf="@id/release_date"
-                app:layout_constraintTop_toTopOf="@id/release_date"
-                tools:text="release date" />
-
-            <TextView
-                android:id="@+id/popularity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin8dp"
-                android:maxHeight="25dp"
-                android:minWidth="90dp"
-                android:text="@{item.popularity.toString()}"
-                android:textColor="@color/primary_text_color"
-                android:textSize="11sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toRightOf="@id/age_classification"
-                app:layout_constraintTop_toTopOf="@id/release_date"
-                tools:text="popularity" />
 
             <TextView
                 android:id="@+id/move_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="@dimen/margin1x"
                 android:gravity="center"
-                android:maxHeight="25dp"
-                android:minWidth="90dp"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
                 android:text="@{item.originalTitle}"
                 android:textColor="@color/primary_text_color"
                 android:textSize="14sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/release_date"
                 app:layout_constraintLeft_toRightOf="@id/item_image"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
