--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="secondary_text_color">#8B8B8B</color>
     <color name="cards_color">#FFFFFF</color>
     <color name="base_color">#E99A27</color>
