--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -113,6 +113,9 @@
         <action
             android:id="@+id/action_detailsTvFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_detailsTvFragment_to_detailsTvFragment"
+            app:destination="@id/detailsTvFragment" />
     </fragment>
     <fragment
         android:id="@+id/aboutTvFragment"
