edit popular fragment design

--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -23,9 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin2x"
             android:gravity="center"
-            android:text="@string/popular_cast"
+            android:text="@string/Famous"
             android:textColor="@color/base_color"
-            android:textSize="26sp"
+            android:textSize="@dimen/text3x"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
