--- a/app/src/main/res/layout/item_popular.xml
+++ b/app/src/main/res/layout/item_popular.xml
@@ -85,6 +85,7 @@
             android:textColor="@color/secondary_text_color"
             android:textSize="@dimen/text12sp"
             android:textStyle="bold"
+            android:text="@{item.mediaType}"
             app:layout_constraintBottom_toTopOf="@id/cast_rate"
             app:layout_constraintLeft_toLeftOf="@id/cast_name"
             app:layout_constraintRight_toRightOf="@id/cast_name"
@@ -100,6 +101,7 @@
             android:elevation="@dimen/elevation8"
             android:isIndicator="true"
             android:numStars="5"
+            android:rating="@{item.gender}"
             android:progressBackgroundTint="@color/secondary_text_color"
             android:progressTint="@color/base_color"
             app:layout_constraintBottom_toBottomOf="@id/top_Card"
