--- a/app/src/main/res/layout/fragment_categories_display.xml
+++ b/app/src/main/res/layout/fragment_categories_display.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin2x"
             android:gravity="center"
-            android:text="@string/categories_list"
+            android:text="@string/categories"
             android:textColor="@color/base_color"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="@id/list_title"
             app:layout_constraintStart_toStartOf="@id/list_title"
             app:layout_constraintTop_toBottomOf="@id/list_title"
-            tools:listitem="@layout/item_categories_display" />
+            tools:listitem="@layout/item_search" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
