--- a/app/src/main/res/layout/item_trending_movies.xml
+++ b/app/src/main/res/layout/item_trending_movies.xml
@@ -15,10 +15,10 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="4dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/margin1x"
+        android:layout_marginBottom="@dimen/margin1x"
         >
 
 
@@ -40,7 +40,7 @@
             android:id="@+id/poster"
             android:layout_width="130dp"
             android:layout_height="170dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/margin2x"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
             android:scaleType="fitXY"
             android:elevation="2dp"
